fix warn messages